--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/main-editor.css">
     <link rel="stylesheet" href="./assets/css/main-menuRight.css">
     <link rel="stylesheet" href="./assets/css/main-menuLeft.css">
+    <link rel="stylesheet" href="./assets/css/dracula.css">
 
 </head>
 
@@ -79,8 +80,9 @@
                 <div class="circulo3 circulo"></div>
 
                 <!-- Área para digitar o código -->
-                <textarea name="areatxt" id="areatxt" class="code-editor_txt">const pluckDeep = key => obj => key.split('.').reduce((accum, key) => accum[key], obj) const compose = (...fns) => res => fns.reduce((accum, next) => next(accum), res) const unfold = (f, seed) => { const go = (f, seed, acc) => { const res = f(seed) return res ? go(f, res[1], acc.concat([res[0]])) : acc } return go(f, seed, []) }
-                </textarea>
+                <div class="code-editor_txt" id="area-codigo">
+                    <code contenteditable="true" aria-label="Editor de código" class="area__codigo hljs">const pluckDeep = key => obj => key.split('.').reduce((accum, key) =>/n accum[key], obj) const compose = (...fns) => res => fns.reduce((accum, next) => next(accum), res) const unfold = (f, seed) => { const go = (f, seed, acc) => { const res = f(seed) return res ? go(f, res[1], acc.concat([res[0]])) : acc } return go(f, seed, []) }</code>
+                </div>
 
             </div>
 
@@ -107,14 +109,14 @@
                     <!-- Seletor de linguagem utilizda -->
                     <select name="linguagem-projeto" id="linguagem-projeto" class="menu__right-select">
 
-                        <option value="HTML" class="value">HTML</option>
-                        <option value="CSS" class="value">CSS</option>
-                        <option value="JavaScript" class="value">JavaScript</option>
+                        <option value="javascript">JavaScript</option>
+                        <option value="css">CSS</option>
+                        <option value="html">HTML</option>
 
                     </select>
 
                     <!-- Color picker para selecionar a cor do fundo do editor -->
-                    <input type="color" value="#6bd1ff"  class="cor-projeto" id="color-picked">
+                    <input type="color" value="#6bd1ff" class="cor-projeto" id="color-picked">
                 </div>
 
                 <!-- Botão para salvar o projeto -->
@@ -125,6 +127,8 @@
     </main>
 
     <script src="./assets/js/cor-bg.js"></script>
+    <script src="./assets//js/highlight.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 
 </body>
 
